--- a/nl/print.html
+++ b/nl/print.html
@@ -2186,7 +2186,7 @@ i               # separator
 <p>List all assets of an address. Requires index with <code>--index-addresses</code> flag.</p>
 <h3 id="voorbeeld-25"><a class="header" href="#voorbeeld-25">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/address/bc1pdrm7tcyk4k6c3cdcjwkp49jmfrwmtvt0dvqyy7y4qp79tgks4lmqdpj6rw
+  http://0.0.0.0/address/bc1pdrm7tcyk4k6c3cdcjwkp49jmfrwmtvt0dvqyy7y4qp79tgks4lmqdpj6rw
 </code></pre>
 <pre><code class="language-json">{
   "outputs": [
@@ -2259,7 +2259,7 @@ i               # separator
 <p>Returns info about the specified block.</p>
 <h3 id="voorbeeld-26"><a class="header" href="#voorbeeld-26">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f
+  http://0.0.0.0/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f
 </code></pre>
 <pre><code class="language-json">{
   "best_height": 864325,
@@ -2300,7 +2300,7 @@ i               # separator
 <p>Returns info about the specified block.</p>
 <h3 id="voorbeeld-27"><a class="header" href="#voorbeeld-27">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/block/0
+  http://0.0.0.0/block/0
 </code></pre>
 <pre><code class="language-json">  {
     "best_height": 864325,
@@ -2341,7 +2341,7 @@ i               # separator
 <p>Returns the height of the latest block.</p>
 <h3 id="voorbeeld-28"><a class="header" href="#voorbeeld-28">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockcount
+  http://0.0.0.0/blockcount
 </code></pre>
 <pre><code class="language-json">864328
 </code></pre>
@@ -2355,7 +2355,7 @@ i               # separator
 <p>Returns blockhash for the latest block.</p>
 <h3 id="voorbeeld-29"><a class="header" href="#voorbeeld-29">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockhash
+  http://0.0.0.0/blockhash
 </code></pre>
 <pre><code class="language-text">00000000000000000000c82c12a925a224605b1bb767f696ae4ff10332dbe9bc
 </code></pre>
@@ -2370,7 +2370,7 @@ i               # separator
 <p>Returns blockhash of specified block.</p>
 <h3 id="voorbeeld-30"><a class="header" href="#voorbeeld-30">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockhash/840000
+  http://0.0.0.0/blockhash/840000
 </code></pre>
 <pre><code class="language-text">0000000000000000000320283a032748cef8227873ff4872689bf23f1cda83a5
 </code></pre>
@@ -2384,7 +2384,7 @@ i               # separator
 <p>Returns the height of the latest block.</p>
 <h3 id="voorbeeld-31"><a class="header" href="#voorbeeld-31">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockheight
+  http://0.0.0.0/blockheight
 </code></pre>
 <pre><code class="language-json">864330
 </code></pre>
@@ -2398,7 +2398,7 @@ i               # separator
 <p>Returns the height of the latest block, the blockhashes of the last 100 blocks, and featured inscriptions from them.</p>
 <h3 id="voorbeeld-32"><a class="header" href="#voorbeeld-32">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blocks
+  http://0.0.0.0/blocks
 </code></pre>
 <pre><code class="language-json">{
   "last": 864335,
@@ -2568,7 +2568,7 @@ i               # separator
 <p>Returns the UNIX timestamp of when the latest block was mined.</p>
 <h3 id="voorbeeld-33"><a class="header" href="#voorbeeld-33">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blocktime
+  http://0.0.0.0/blocktime
 </code></pre>
 <pre><code class="language-json">1728158372
 </code></pre>
@@ -2582,7 +2582,7 @@ i               # separator
 <p>Decode a transaction, congruent to the <code>ord decode</code> command</p>
 <h3 id="voorbeeld-34"><a class="header" href="#voorbeeld-34">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/decode/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799
+  http://0.0.0.0/decode/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799
 </code></pre>
 <pre><code class="language-json">{
   "inscriptions": [
@@ -3424,7 +3424,7 @@ i               # separator
 <p>Fetch details about a specific inscription by its ID.</p>
 <h3 id="voorbeeld-35"><a class="header" href="#voorbeeld-35">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" /
-  http://0.0.0.0:80/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0
+  http://0.0.0.0/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1ppth27qnr74qhusy9pmcyeaelgvsfky6qzquv9nf56gqmte59vfhqwkqguh",
@@ -3461,7 +3461,7 @@ i               # separator
 <p>Returns the inscription information for the specified child.</p>
 <h3 id="voorbeeld-36"><a class="header" href="#voorbeeld-36">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscription/b1ef66c2d1a047cbaa6260b74daac43813924378fe08ef8545da4cb79e8fcf00i0/0
+  http://0.0.0.0/inscription/b1ef66c2d1a047cbaa6260b74daac43813924378fe08ef8545da4cb79e8fcf00i0/0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1pnhyyzpetra3zvm376ng8ncnv9phtt45fczpt7sv2eatedtjj9vjqwhj080",
@@ -3501,7 +3501,7 @@ i               # separator
   -H "Accept: application/json" \
   -H "Content-Type: application/json" \
   -d '["ab924ff229beca227bf40221faf492a20b5e2ee4f084524c84a5f98b80fe527fi1", "ab924ff229beca227bf40221faf492a20b5e2ee4f084524c84a5f98b80fe527fi0"]' \
-  http://0.0.0.0:80/inscriptions
+  http://0.0.0.0/inscriptions
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -3564,7 +3564,7 @@ i               # separator
 <p>Get a list of the latest 100 inscriptions.</p>
 <h3 id="voorbeeld-38"><a class="header" href="#voorbeeld-38">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions
+  http://0.0.0.0/inscriptions
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -3683,7 +3683,7 @@ i               # separator
 <p>Pagination allows you to choose which page of 100 inscriptions to return.</p>
 <h3 id="voorbeeld-39"><a class="header" href="#voorbeeld-39">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions/9
+  http://0.0.0.0/inscriptions/9
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -3802,7 +3802,7 @@ i               # separator
 <p>Get inscriptions for a specific block.</p>
 <h3 id="voorbeeld-40"><a class="header" href="#voorbeeld-40">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions/block/767430
+  http://0.0.0.0/inscriptions/block/767430
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -3825,14 +3825,38 @@ i               # separator
 </details>
 <details>
  <summary>
+    <code>POST</code>
+    <code><b>/offer</b></code>
+ </summary>
+<h3 id="description-40"><a class="header" href="#description-40">Description</a></h3>
+<p>Submit a PSBT offer. The body of the request is a base64 encoded PSBT.</p>
+<h3 id="voorbeeld-42"><a class="header" href="#voorbeeld-42">Voorbeeld</a></h3>
+<pre><code class="language-bash">curl -s -X POST --data-binary @offer.psbt http://0.0.0.0/offer
+</code></pre>
+</details>
+<details>
+ <summary>
+    <code>GET</code>
+    <code><b>/offers</b></code>
+ </summary>
+<h3 id="description-41"><a class="header" href="#description-41">Description</a></h3>
+<p>Get submitted PSBT offers. Returns an array of base64 encoded PSBTs.</p>
+<h3 id="voorbeeld-43"><a class="header" href="#voorbeeld-43">Voorbeeld</a></h3>
+<pre><code class="language-bash">curl -s -H "Accept: application/json" http://0.0.0.0/offers
+</code></pre>
+<pre><code class="language-json">["bG…gd==","aG…GQ"]
+</code></pre>
+</details>
+<details>
+ <summary>
     <code>GET</code>
     <code><b>/output/&lt;OUTPOINT&gt;</b></code>
  </summary>
-<h3 id="description-40"><a class="header" href="#description-40">Description</a></h3>
+<h3 id="description-42"><a class="header" href="#description-42">Description</a></h3>
 <p>Returns information about a UTXO, including inscriptions within it.</p>
-<h3 id="voorbeeld-42"><a class="header" href="#voorbeeld-42">Voorbeeld</a></h3>
+<h3 id="voorbeeld-44"><a class="header" href="#voorbeeld-44">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/output/bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0
+  http://0.0.0.0/output/bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1pz4kvfpurqc2hwgrq0nwtfve2lfxvdpfcdpzc6ujchyr3ztj6gd9sfr6ayf",
@@ -3854,14 +3878,14 @@ i               # separator
     <code>POST</code>
     <code><b>/outputs</b></code>
  </summary>
-<h3 id="description-41"><a class="header" href="#description-41">Description</a></h3>
+<h3 id="description-43"><a class="header" href="#description-43">Description</a></h3>
 <p>List information from a list of outputs.</p>
-<h3 id="voorbeeld-43"><a class="header" href="#voorbeeld-43">Voorbeeld</a></h3>
+<h3 id="voorbeeld-45"><a class="header" href="#voorbeeld-45">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -X POST \
   -H "Accept: application/json" \
   -H "Content-Type: application/json" \
   -d '["bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0", "bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:1"]' \
-  http://0.0.0.0:80/outputs
+  http://0.0.0.0/outputs
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -3896,7 +3920,7 @@ i               # separator
     <code>GET</code>
     <code><b>/outputs/&lt;ADDRESS&gt;</b></code>
   </summary>
-<h3 id="description-42"><a class="header" href="#description-42">Description</a></h3>
+<h3 id="description-44"><a class="header" href="#description-44">Description</a></h3>
 <p>Get UTXOs held by <code>&lt;ADDRESS&gt;</code>.</p>
 <h3 id="query-parameters"><a class="header" href="#query-parameters">Query Parameters</a></h3>
 <h4 id="type-optional"><a class="header" href="#type-optional"><code>type</code> (optional)</a></h4>
@@ -3907,9 +3931,9 @@ i               # separator
 <tr><td><code>runic</code></td><td>return UTXOs containing runes</td></tr>
 </tbody></table>
 </div>
-<h3 id="voorbeeld-44"><a class="header" href="#voorbeeld-44">Voorbeeld</a></h3>
+<h3 id="voorbeeld-46"><a class="header" href="#voorbeeld-46">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  "http://0.0.0.0:80/outputs/358mMRwcxuCSkKheuVWaXHJBGKrXo3f6JW?type=cardinal"
+  "http://0.0.0.0/outputs/358mMRwcxuCSkKheuVWaXHJBGKrXo3f6JW?type=cardinal"
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -3970,9 +3994,9 @@ i               # separator
     <code>GET</code>
     <code><b>/rune/&lt;RUNE&gt;</b></code>
   </summary>
-<h3 id="description-43"><a class="header" href="#description-43">Description</a></h3>
+<h3 id="description-45"><a class="header" href="#description-45">Description</a></h3>
 <p>Returns details about the specified rune. Requires index with <code>--index-runes</code> flag.</p>
-<h3 id="voorbeeld-45"><a class="header" href="#voorbeeld-45">Voorbeeld</a></h3>
+<h3 id="voorbeeld-47"><a class="header" href="#voorbeeld-47">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
   http://localhost/rune/UNCOMMONGOODS
 </code></pre>
@@ -4013,11 +4037,11 @@ i               # separator
     <code>GET</code>
     <code><b>/runes</b></code>
   </summary>
-<h3 id="description-44"><a class="header" href="#description-44">Description</a></h3>
+<h3 id="description-46"><a class="header" href="#description-46">Description</a></h3>
 <p>Returns details for last 100 inscribed runes.  Requires index with <code>--index-runes</code> flag.</p>
-<h3 id="voorbeeld-46"><a class="header" href="#voorbeeld-46">Voorbeeld</a></h3>
+<h3 id="voorbeeld-48"><a class="header" href="#voorbeeld-48">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/runes
+  http://0.0.0.0/runes
 </code></pre>
 <pre><code class="language-json">{
   "entries": [
@@ -5501,11 +5525,11 @@ i               # separator
     <code>GET</code>
     <code><b>/runes/&lt;PAGE&gt;</b></code>
   </summary>
-<h3 id="description-45"><a class="header" href="#description-45">Description</a></h3>
+<h3 id="description-47"><a class="header" href="#description-47">Description</a></h3>
 <p>Pagination allows you to specify which page of 100 runes you'd like to return.</p>
-<h3 id="voorbeeld-47"><a class="header" href="#voorbeeld-47">Voorbeeld</a></h3>
+<h3 id="voorbeeld-49"><a class="header" href="#voorbeeld-49">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/runes/0
+  http://0.0.0.0/runes/0
 </code></pre>
 <pre><code class="language-json">{
   "entries": [
@@ -6989,11 +7013,11 @@ i               # separator
     <code>GET</code>
     <code><b>/sat/&lt;SAT&gt;</b></code>
   </summary>
-<h3 id="description-46"><a class="header" href="#description-46">Description</a></h3>
+<h3 id="description-48"><a class="header" href="#description-48">Description</a></h3>
 <p>Returns details about a specific satoshi. Requires index with <code>--index-sats</code> flag.</p>
-<h3 id="voorbeeld-48"><a class="header" href="#voorbeeld-48">Voorbeeld</a></h3>
+<h3 id="voorbeeld-50"><a class="header" href="#voorbeeld-50">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/sat/2099994106992659
+  http://0.0.0.0/sat/2099994106992659
 </code></pre>
 <pre><code class="language-json">{
   "block": 3891094,
@@ -7019,11 +7043,11 @@ i               # separator
     <code>GET</code>
     <code><b>/status</b></code>
   </summary>
-<h3 id="description-47"><a class="header" href="#description-47">Description</a></h3>
+<h3 id="description-49"><a class="header" href="#description-49">Description</a></h3>
 <p>Returns details about the server installation and index.</p>
-<h3 id="voorbeeld-49"><a class="header" href="#voorbeeld-49">Voorbeeld</a></h3>
+<h3 id="voorbeeld-51"><a class="header" href="#voorbeeld-51">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/status
+  http://0.0.0.0/status
 </code></pre>
 <pre><code class="language-json">{
   "address_index": true,
@@ -7056,11 +7080,11 @@ i               # separator
     <code>GET</code>
     <code><b>/tx/&lt;TRANSACTION_ID&gt;</b></code>
   </summary>
-<h3 id="description-48"><a class="header" href="#description-48">Description</a></h3>
+<h3 id="description-50"><a class="header" href="#description-50">Description</a></h3>
 <p>Returns details about the specified transaction.</p>
-<h3 id="voorbeeld-50"><a class="header" href="#voorbeeld-50">Voorbeeld</a></h3>
+<h3 id="voorbeeld-52"><a class="header" href="#voorbeeld-52">Voorbeeld</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/tx/99811de396ff10152cdfc9588d9750d0151501f081df2e56071c42dc3532b743
+  http://0.0.0.0/tx/99811de396ff10152cdfc9588d9750d0151501f081df2e56071c42dc3532b743
 </code></pre>
 <pre><code class="language-json">{
   "chain": "mainnet",
@@ -7645,7 +7669,7 @@ outputs:
 <p>Teleburn-adressen zijn afgeleid van inscriptie-ID's. Ze hebben geen bijbehorende privésleutel, dus activa die naar een teleburn-adres worden gestuurd, worden verbrand. Momenteel worden alleen Ethereum-teleburn-adressen ondersteund. Pull requests die teleburn-adressen voor andere chains toevoegen zijn welkom.</p>
 <h2 id="ethereum"><a class="header" href="#ethereum">Ethereum</a></h2>
 <p>Ethereum-teleburn-adressen worden afgeleid door de eerste 20 bytes van de SHA-256-hash van de inscriptie-ID te nemen, geserialiseerd als 36 bytes, waarbij de eerste 32 bytes de transactie-ID bevatten en de laatste vier bytes de big-endian inscriptie-index, en dit te interpreteren als een Ethereum-adres.</p>
-<h2 id="voorbeeld-51"><a class="header" href="#voorbeeld-51">Voorbeeld</a></h2>
+<h2 id="voorbeeld-53"><a class="header" href="#voorbeeld-53">Voorbeeld</a></h2>
 <p>De ENS-domeinnaam <a href="https://app.ens.domains/rodarmor.eth">rodarmor.eth</a> werd teleburned naar <a href="https://ordinals.com/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0">inscriptie nul</a>.</p>
 <p>De inscriptie-ID van inscriptie nul is <code>6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0</code>.</p>
 <p>Het doorgeven van <code>6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0</code> aan het teleburn-commando:</p>
@@ -7686,7 +7710,7 @@ $ord outputs
 </tbody></table>
 </div>
 <p>Regtest vereist niet het downloaden van de blockchain, omdat je je eigen privé-blockchain creëert, waardoor het indexeren van <code>ord</code> bijna onmiddellijk is.</p>
-<h2 id="voorbeeld-52"><a class="header" href="#voorbeeld-52">Voorbeeld</a></h2>
+<h2 id="voorbeeld-54"><a class="header" href="#voorbeeld-54">Voorbeeld</a></h2>
 <p>Voer <code>bitcoind</code> uit in regtest met:</p>
 <pre><code>bitcoind -regtest -txindex
 </code></pre>
