--- a/print.html
+++ b/print.html
@@ -2858,7 +2858,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>List all assets of an address. Requires index with <code>--index-addresses</code> flag.</p>
 <h3 id="example-25"><a class="header" href="#example-25">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/address/bc1pdrm7tcyk4k6c3cdcjwkp49jmfrwmtvt0dvqyy7y4qp79tgks4lmqdpj6rw
+  http://0.0.0.0/address/bc1pdrm7tcyk4k6c3cdcjwkp49jmfrwmtvt0dvqyy7y4qp79tgks4lmqdpj6rw
 </code></pre>
 <pre><code class="language-json">{
   "outputs": [
@@ -2931,7 +2931,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns info about the specified block.</p>
 <h3 id="example-26"><a class="header" href="#example-26">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f
+  http://0.0.0.0/block/000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f
 </code></pre>
 <pre><code class="language-json">{
   "best_height": 864325,
@@ -2972,7 +2972,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns info about the specified block.</p>
 <h3 id="example-27"><a class="header" href="#example-27">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/block/0
+  http://0.0.0.0/block/0
 </code></pre>
 <pre><code class="language-json">  {
     "best_height": 864325,
@@ -3013,7 +3013,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns the height of the latest block.</p>
 <h3 id="example-28"><a class="header" href="#example-28">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockcount
+  http://0.0.0.0/blockcount
 </code></pre>
 <pre><code class="language-json">864328
 </code></pre>
@@ -3027,7 +3027,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns blockhash for the latest block.</p>
 <h3 id="example-29"><a class="header" href="#example-29">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockhash
+  http://0.0.0.0/blockhash
 </code></pre>
 <pre><code class="language-text">00000000000000000000c82c12a925a224605b1bb767f696ae4ff10332dbe9bc
 </code></pre>
@@ -3042,7 +3042,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns blockhash of specified block.</p>
 <h3 id="example-30"><a class="header" href="#example-30">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockhash/840000
+  http://0.0.0.0/blockhash/840000
 </code></pre>
 <pre><code class="language-text">0000000000000000000320283a032748cef8227873ff4872689bf23f1cda83a5
 </code></pre>
@@ -3056,7 +3056,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns the height of the latest block.</p>
 <h3 id="example-31"><a class="header" href="#example-31">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blockheight
+  http://0.0.0.0/blockheight
 </code></pre>
 <pre><code class="language-json">864330
 </code></pre>
@@ -3070,7 +3070,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns the height of the latest block, the blockhashes of the last 100 blocks, and featured inscriptions from them.</p>
 <h3 id="example-32"><a class="header" href="#example-32">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blocks
+  http://0.0.0.0/blocks
 </code></pre>
 <pre><code class="language-json">{
   "last": 864335,
@@ -3240,7 +3240,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns the UNIX timestamp of when the latest block was mined.</p>
 <h3 id="example-33"><a class="header" href="#example-33">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/blocktime
+  http://0.0.0.0/blocktime
 </code></pre>
 <pre><code class="language-json">1728158372
 </code></pre>
@@ -3254,7 +3254,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Decode a transaction, congruent to the <code>ord decode</code> command</p>
 <h3 id="example-34"><a class="header" href="#example-34">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/decode/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799
+  http://0.0.0.0/decode/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799
 </code></pre>
 <pre><code class="language-json">{
   "inscriptions": [
@@ -4096,7 +4096,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Fetch details about a specific inscription by its ID.</p>
 <h3 id="example-35"><a class="header" href="#example-35">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" /
-  http://0.0.0.0:80/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0
+  http://0.0.0.0/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1ppth27qnr74qhusy9pmcyeaelgvsfky6qzquv9nf56gqmte59vfhqwkqguh",
@@ -4133,7 +4133,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Returns the inscription information for the specified child.</p>
 <h3 id="example-36"><a class="header" href="#example-36">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscription/b1ef66c2d1a047cbaa6260b74daac43813924378fe08ef8545da4cb79e8fcf00i0/0
+  http://0.0.0.0/inscription/b1ef66c2d1a047cbaa6260b74daac43813924378fe08ef8545da4cb79e8fcf00i0/0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1pnhyyzpetra3zvm376ng8ncnv9phtt45fczpt7sv2eatedtjj9vjqwhj080",
@@ -4173,7 +4173,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
   -H "Accept: application/json" \
   -H "Content-Type: application/json" \
   -d '["ab924ff229beca227bf40221faf492a20b5e2ee4f084524c84a5f98b80fe527fi1", "ab924ff229beca227bf40221faf492a20b5e2ee4f084524c84a5f98b80fe527fi0"]' \
-  http://0.0.0.0:80/inscriptions
+  http://0.0.0.0/inscriptions
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -4236,7 +4236,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Get a list of the latest 100 inscriptions.</p>
 <h3 id="example-38"><a class="header" href="#example-38">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions
+  http://0.0.0.0/inscriptions
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -4355,7 +4355,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Pagination allows you to choose which page of 100 inscriptions to return.</p>
 <h3 id="example-39"><a class="header" href="#example-39">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions/9
+  http://0.0.0.0/inscriptions/9
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -4474,7 +4474,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <p>Get inscriptions for a specific block.</p>
 <h3 id="example-40"><a class="header" href="#example-40">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/inscriptions/block/767430
+  http://0.0.0.0/inscriptions/block/767430
 </code></pre>
 <pre><code class="language-json">{
   "ids": [
@@ -4497,14 +4497,38 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 </details>
 <details>
  <summary>
+    <code>POST</code>
+    <code><b>/offer</b></code>
+ </summary>
+<h3 id="description-40"><a class="header" href="#description-40">Description</a></h3>
+<p>Submit a PSBT offer. The body of the request is a base64 encoded PSBT.</p>
+<h3 id="example-42"><a class="header" href="#example-42">Example</a></h3>
+<pre><code class="language-bash">curl -s -X POST --data-binary @offer.psbt http://0.0.0.0/offer
+</code></pre>
+</details>
+<details>
+ <summary>
+    <code>GET</code>
+    <code><b>/offers</b></code>
+ </summary>
+<h3 id="description-41"><a class="header" href="#description-41">Description</a></h3>
+<p>Get submitted PSBT offers. Returns an array of base64 encoded PSBTs.</p>
+<h3 id="example-43"><a class="header" href="#example-43">Example</a></h3>
+<pre><code class="language-bash">curl -s -H "Accept: application/json" http://0.0.0.0/offers
+</code></pre>
+<pre><code class="language-json">["bG…gd==","aG…GQ"]
+</code></pre>
+</details>
+<details>
+ <summary>
     <code>GET</code>
     <code><b>/output/&lt;OUTPOINT&gt;</b></code>
  </summary>
-<h3 id="description-40"><a class="header" href="#description-40">Description</a></h3>
+<h3 id="description-42"><a class="header" href="#description-42">Description</a></h3>
 <p>Returns information about a UTXO, including inscriptions within it.</p>
-<h3 id="example-42"><a class="header" href="#example-42">Example</a></h3>
+<h3 id="example-44"><a class="header" href="#example-44">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/output/bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0
+  http://0.0.0.0/output/bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0
 </code></pre>
 <pre><code class="language-json">{
   "address": "bc1pz4kvfpurqc2hwgrq0nwtfve2lfxvdpfcdpzc6ujchyr3ztj6gd9sfr6ayf",
@@ -4526,14 +4550,14 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>POST</code>
     <code><b>/outputs</b></code>
  </summary>
-<h3 id="description-41"><a class="header" href="#description-41">Description</a></h3>
+<h3 id="description-43"><a class="header" href="#description-43">Description</a></h3>
 <p>List information from a list of outputs.</p>
-<h3 id="example-43"><a class="header" href="#example-43">Example</a></h3>
+<h3 id="example-45"><a class="header" href="#example-45">Example</a></h3>
 <pre><code class="language-bash">curl -s -X POST \
   -H "Accept: application/json" \
   -H "Content-Type: application/json" \
   -d '["bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:0", "bc4c30829a9564c0d58e6287195622b53ced54a25711d1b86be7cd3a70ef61ed:1"]' \
-  http://0.0.0.0:80/outputs
+  http://0.0.0.0/outputs
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -4568,7 +4592,7 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/outputs/&lt;ADDRESS&gt;</b></code>
   </summary>
-<h3 id="description-42"><a class="header" href="#description-42">Description</a></h3>
+<h3 id="description-44"><a class="header" href="#description-44">Description</a></h3>
 <p>Get UTXOs held by <code>&lt;ADDRESS&gt;</code>.</p>
 <h3 id="query-parameters"><a class="header" href="#query-parameters">Query Parameters</a></h3>
 <h4 id="type-optional"><a class="header" href="#type-optional"><code>type</code> (optional)</a></h4>
@@ -4579,9 +4603,9 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
 <tr><td><code>runic</code></td><td>return UTXOs containing runes</td></tr>
 </tbody></table>
 </div>
-<h3 id="example-44"><a class="header" href="#example-44">Example</a></h3>
+<h3 id="example-46"><a class="header" href="#example-46">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  "http://0.0.0.0:80/outputs/358mMRwcxuCSkKheuVWaXHJBGKrXo3f6JW?type=cardinal"
+  "http://0.0.0.0/outputs/358mMRwcxuCSkKheuVWaXHJBGKrXo3f6JW?type=cardinal"
 </code></pre>
 <pre><code class="language-json">[
   {
@@ -4642,9 +4666,9 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/rune/&lt;RUNE&gt;</b></code>
   </summary>
-<h3 id="description-43"><a class="header" href="#description-43">Description</a></h3>
+<h3 id="description-45"><a class="header" href="#description-45">Description</a></h3>
 <p>Returns details about the specified rune. Requires index with <code>--index-runes</code> flag.</p>
-<h3 id="example-45"><a class="header" href="#example-45">Example</a></h3>
+<h3 id="example-47"><a class="header" href="#example-47">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
   http://localhost/rune/UNCOMMONGOODS
 </code></pre>
@@ -4685,11 +4709,11 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/runes</b></code>
   </summary>
-<h3 id="description-44"><a class="header" href="#description-44">Description</a></h3>
+<h3 id="description-46"><a class="header" href="#description-46">Description</a></h3>
 <p>Returns details for last 100 inscribed runes.  Requires index with <code>--index-runes</code> flag.</p>
-<h3 id="example-46"><a class="header" href="#example-46">Example</a></h3>
+<h3 id="example-48"><a class="header" href="#example-48">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/runes
+  http://0.0.0.0/runes
 </code></pre>
 <pre><code class="language-json">{
   "entries": [
@@ -6173,11 +6197,11 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/runes/&lt;PAGE&gt;</b></code>
   </summary>
-<h3 id="description-45"><a class="header" href="#description-45">Description</a></h3>
+<h3 id="description-47"><a class="header" href="#description-47">Description</a></h3>
 <p>Pagination allows you to specify which page of 100 runes you'd like to return.</p>
-<h3 id="example-47"><a class="header" href="#example-47">Example</a></h3>
+<h3 id="example-49"><a class="header" href="#example-49">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/runes/0
+  http://0.0.0.0/runes/0
 </code></pre>
 <pre><code class="language-json">{
   "entries": [
@@ -7661,11 +7685,11 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/sat/&lt;SAT&gt;</b></code>
   </summary>
-<h3 id="description-46"><a class="header" href="#description-46">Description</a></h3>
+<h3 id="description-48"><a class="header" href="#description-48">Description</a></h3>
 <p>Returns details about a specific satoshi. Requires index with <code>--index-sats</code> flag.</p>
-<h3 id="example-48"><a class="header" href="#example-48">Example</a></h3>
+<h3 id="example-50"><a class="header" href="#example-50">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/sat/2099994106992659
+  http://0.0.0.0/sat/2099994106992659
 </code></pre>
 <pre><code class="language-json">{
   "block": 3891094,
@@ -7691,11 +7715,11 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/status</b></code>
   </summary>
-<h3 id="description-47"><a class="header" href="#description-47">Description</a></h3>
+<h3 id="description-49"><a class="header" href="#description-49">Description</a></h3>
 <p>Returns details about the server installation and index.</p>
-<h3 id="example-49"><a class="header" href="#example-49">Example</a></h3>
+<h3 id="example-51"><a class="header" href="#example-51">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/status
+  http://0.0.0.0/status
 </code></pre>
 <pre><code class="language-json">{
   "address_index": true,
@@ -7728,11 +7752,11 @@ explorer, a guide for sat hunters, and a guide to inscriptions.</p>
     <code>GET</code>
     <code><b>/tx/&lt;TRANSACTION_ID&gt;</b></code>
   </summary>
-<h3 id="description-48"><a class="header" href="#description-48">Description</a></h3>
+<h3 id="description-50"><a class="header" href="#description-50">Description</a></h3>
 <p>Returns details about the specified transaction.</p>
-<h3 id="example-50"><a class="header" href="#example-50">Example</a></h3>
+<h3 id="example-52"><a class="header" href="#example-52">Example</a></h3>
 <pre><code class="language-bash">curl -s -H "Accept: application/json" \
-  http://0.0.0.0:80/tx/99811de396ff10152cdfc9588d9750d0151501f081df2e56071c42dc3532b743
+  http://0.0.0.0/tx/99811de396ff10152cdfc9588d9750d0151501f081df2e56071c42dc3532b743
 </code></pre>
 <pre><code class="language-json">{
   "chain": "mainnet",
@@ -8433,7 +8457,7 @@ addresses for other chains are welcome.</p>
 SHA-256 hash of the inscription ID, serialized as 36 bytes, with the first 32
 bytes containing the transaction ID, and the last four bytes containing
 big-endian inscription index, and interpreting it as an Ethereum address.</p>
-<h2 id="example-51"><a class="header" href="#example-51">Example</a></h2>
+<h2 id="example-53"><a class="header" href="#example-53">Example</a></h2>
 <p>The ENS domain name <a href="https://app.ens.domains/rodarmor.eth">rodarmor.eth</a>, was
 teleburned to <a href="https://ordinals.com/inscription/6fb976ab49dcec017f1e201e84395983204ae1a7c2abf7ced0a85d692e442799i0">inscription
 zero</a>.</p>
@@ -8490,7 +8514,7 @@ can be run with the following network flags:</p>
 </div>
 <p>Regtest doesn't require downloading the blockchain since you create your own
 private blockchain, so indexing <code>ord</code> is almost instantaneous.</p>
-<h2 id="example-52"><a class="header" href="#example-52">Example</a></h2>
+<h2 id="example-54"><a class="header" href="#example-54">Example</a></h2>
 <p>Run <code>bitcoind</code> in regtest with:</p>
 <pre><code>bitcoind -regtest -txindex
 </code></pre>
